Make changes to prevent overscroll on Safari PWA

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  @apply m-0 bg-white;
+  @apply m-0 bg-white fixed left-0 top-0 right-0 bottom-0;
 
   font-family: Roboto, "Helvetica Neue", sans-serif;
   overscroll-behavior-y: none;
